@@ -13,6 +13,7 @@
 - Fixed: Product 'purchase to stock' conversion is preferred to additional conversions (#490)
 - Fixed: Quantity units from default conversions are now selectable on transaction pages (#530)
 - Fixed: Location filter didn't work properly on stock overview page (#554)
+- Fixed: Skip scanner steps on login if no camera available (#553)
 
 2.2.1:
 - New: Stock entries page (#403)
